Revision history for Test::Apocalypse

{{$NEXT}}

1.006	2014-10-25 20:10:12 UTC

	Proper release on CPAN :)

1.005	2014-10-25 19:58:22 UTC

	FakeRelease to test my dzil configs!

1.004	2014-10-25 05:07:26 UTC

	Tweak how we skip/disable plugins because of the recent subtest change, I broke some stuff :(
	I give up on the Pod::No404s test, the internet is too flaky everywhere :(
	Removed the OutdatedPrereqs test because I now use Dist::Zilla::Plugin::PromptIfStale, thanks ETHER!

1.003	2014-10-25 00:12:08 UTC

	Add Test::Mojibake to the dist
	Add more exclusions to the standard Perl::Critic config
	Add PERL_CRITIC_STRICT env var to skip the bundled Perl::Critic config
	Fix an error in Test::Apocalypse::Script
	Use Test::CPAN::Changes instead of the outdated Test::CheckChanges
	Ripped out the dysfunctional Test::NoWarnings in favor of Test::FailWarnings, thanks DAGOLDEN!
	Ignore the 'perl' dependency when checking deps
	Fix version mismatch error when checking dependencies ( 'v0.0.6' vs '0.0.6' )
	Thanks everyone who sent RT tickets to clean up the FAILs :)
	Finally enabled the Test::Vars plugin as I've switched over to using subtests instead of Test::Block

1.002	2011-04-21 21:49:46 UTC

	Add more default exclusions to the Perl::Critic default .perlcriticrc
	Tweaked the OutdatedPrereqs test *again* so it FAILs if a prereq version is higher than found on CPAN
	Tweaked the Dependencies test so it correctly processes found prereqs that has no version

1.001	2011-03-08 21:37:20 UTC

	Tweaked the OutdatedPrereqs test so it will correctly FAIL if a prereq wasn't found on CPAN
	Tweaked the Dependencies test so it correctly filters provided packages

1.000	2011-03-04 23:37:23 UTC

	Converted to Dist::Zilla for the release process!
	Tweaked the internals to cleanup automated issues
	Ported the META.(yml|json) tests to the new Test::CPAN::Meta infrastructure, thanks JAWNSY! ( RT#66215 )
	Changed some plugins so they execute tests as TODO, to not cause spurious FAILs