@@ -2,6 +2,8 @@ Revision history for Test::Apocalypse
 
 {{$NEXT}}
 
+	Removed yet another perlcritic rule, thanks to crazy UTF8 creeping into my code :)
+
 1.006	2014-10-25 20:10:12 UTC
 
 	Proper release on CPAN :)
